# tgcf

./: Dockerfile  Dockerfile.min  pyproject.toml
