[tool.poetry]
name = "tgcf"
version = "0.2.11.post0"
description = "The ultimate tool to automate custom telegram message forwarding."
authors = ["aahnik <daw@aahnik.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aahnik/tgcf"
documentation = "https://github.com/aahnik/tgcf/wiki"

[tool.poetry.dependencies]
python = "^3.10.2"
requests = "^2.27.1"
typer = "^0.4.0"
python-dotenv = "^0.19.2"
PyYAML = "^6.0"
pydantic = "^1.9.0"
Telethon = "1.24.0"
cryptg = "^0.2.post4"
Pillow = "^9.0.1"
hachoir = "^3.1.2"
aiohttp = "^3.8.1"
tg-login = "^0.0.2"
"watermark.py" = "^0.0.3"
pytesseract = "^0.3.9"
rich = "^11.2.0"
pyfiglet = "^0.8.post1"
verlat = "^0.1.0"

[tool.poetry.dev-dependencies]
typer-cli = "^0.0.12"
black = {version = "^22.1.0", allow-prereleases = true}
isort = "^5.10.1"
pre-commit = "^2.17.0"


[tool.poetry.scripts]
tgcf = 'tgcf.cli:app'

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
